--- a/ROADMAP.org
+++ b/ROADMAP.org
@@ -34,6 +34,7 @@ ROADMAP
 	- [ ] put method name index into the same file so it's not confusing
 ** TODO Spring version
 ** MAYBE Sampling profiler
+** TODO Add proper blacklist for classpaths not to instrument
 
 * TODO Documentation/Webpage
 
